allow to add imports to the caddy file
Signed-off-by: Simon L <szaimen@e.mail.de>

--- a/Containers/apache/Caddyfile
+++ b/Containers/apache/Caddyfile
@@ -55,6 +55,9 @@
         }
     }
 
+    # Others
+    import /mnt/data/caddy-imports/*
+
     # Nextcloud
     route {
         rewrite /.well-known/carddav /remote.php/dav
